--- a/app/public/wp-content/themes/foce-child/style.css
+++ b/app/public/wp-content/themes/foce-child/style.css
@@ -8,10 +8,11 @@
  Version: 0.1
  */
 
+
+ /* Animation de rotation pour les fleurs */
  .story__article::after, .story h2::after, #studio h2::before, #studio h2::after {
    animation: rotation 20s infinite linear;
 }
-
 
 @keyframes rotation {
    from {
@@ -21,3 +22,22 @@
        transform: rotate(360deg);
    }
 }
+
+/* Animation flottement pour le titre */
+.banner img {
+   border:10px solid lime
+}
+
+@keyframes float {
+	0% {
+		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+		transform: translatey(0px);
+	}
+	50% {
+		box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2);
+		transform: translatey(-20px);
+	}
+	100% {
+		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+		transform: translatey(0px);
+	}
