--- a/app/public/wp-content/themes/foce-child/assets/css/theme.scss
+++ b/app/public/wp-content/themes/foce-child/assets/css/theme.scss
@@ -1,20 +1,5 @@
-body {
-    a { 
-        color: pink;
-        &:hover { // & indique que c'est l'élément sur lequel on est en ce moment
-            color: blue
-        } 
-        &.btn {
-            background: yellow;
-            span {
-                font-weight: bold;
-            }
-        }
-    }
-}
-
 /* Animation de rotation pour les fleurs */
-.story__article::after, .story h2::after, #studio h2::before, #studio h2::after {
+.story__article::after, .story h2::after, #studio h2::before, #studio h2::after, .site-footer::before, .site-footer::after {
     animation: rotation 20s infinite linear;
  }
  
@@ -27,30 +12,143 @@ body {
     }
  }
 
-#nomination {
-    display: flex;
-    flex-direction: row;
-    border:5px solid lime;
-    justify-content: space-between;
-    width: 66.66%;
-    margin: auto;
+
+footer {
+    flex-direction: column;
+
+    .row {
+        width:100%
+    }
+
+    ul {
+        margin-top: 23em
+    }
+
+
 }
 
-#nomination h3 {
-    color:red;
-    background-image: url(http://koukaki.local/wp-content/themes/foce/assets/images/orange_place_bg.png);
-}
+.site-footer {
+    padding-top: 9em!important;
 
+    ul {
+        margin-top: 20em
+    }
 
-h2 {
-    opacity: 1;
-    transition: opacity 2s ease 0s;
-
-    &:hover {
-        opacity: 1;
+    &::after {
+        top: 0;
+        bottom: initial
     }
 }
-  
+
+.position-absolute {
+    position: absolute;
+}
+
+.zindex100 {
+    z-index: 100;
+}
+
+.banner {
+    margin-bottom:5em;
+    position: relative;
+    
+    @media screen and (min-width: 601px) {
+        min-height: 806px;
+        background-image: none;
+
+        img {
+            width:100%
+        }
+
+        video {
+            opacity: 1;
+            width: 100vw;
+            object-fit: cover;
+            z-index: 0;
+        } 
+    }
+
+
+
+    @media screen and (max-width: 600px) {
+        min-height: 400px;
+        video {
+            display: none
+        }
+    }
+}
+
+
+
+
+#nomination {
+    clear:both;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: auto;   
+    width:95%;
+
+    div {
+        background-image: url("/wp-content/themes/foce/assets/images/orange_place_bg.png");
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: center;
+        padding: 5em;    
+    }
+
+    h3 {
+        color: #FFF5E9;
+        padding: 1em 1.6em;
+        margin: 0;
+        background-position: center;
+        text-shadow: 2px 2px 5px rgb(0,0,0,0.5);
+        text-align: left;
+    }
+
+    .logo {
+        width:60%;
+        text-align: center;
+        background-image:none!important
+    }
+}
+
+
+
+
+h2, h3 {
+    // opacity: 1;
+    // transition: opacity 2s ease 0s;
+
+    // &:hover {
+    //     opacity: 1;
+    // }
+    #movetxt {
+        opacity: 0;
+        transition: opacity 1s ease 0s;
+
+        &:hover {
+            opacity:1;
+            -webkit-animation: moving 1s ease-out;
+            animation: moving 500ms ease-out;
+        }
+
+        @-webkit-keyframes moving {
+            from {-webkit-transform: translateY(30px);}
+            to {-webkit-transform: translateY(0px);}
+        }
+        
+        @keyframes moving {
+            from {transform: translateY(30px);}
+            to {transform: translateY(0px);}
+        }
+    }
+
+}
+
+
+
+
 
 
 // sass --watch theme.scss:theme.css --style compressed
@@ -72,8 +170,107 @@ h2 {
 .toAnim {
     opacity: 0;
     transition: opacity 2s ease 0s;
+    &.anim {
+        opacity: 1;
+    }
 }
+
+.swiper {
+    width: 80%;
+    h3 {
+        text-align: left;
+        background-position: left;
+        padding: 1em 1.2em;
+    }
+    &-slide {
+        background-position: center;
+        background-size: cover;
+    }
+    &-slide img {
+        display: block;
+        width: 100%;
+    }
+}
+
+.swiper-wrapper {
+    // transform: translate3d(0px, 0px, 0px)!important;
+}
+
+
+
+
+.story #place {
+    background-image: url(/wp-content/themes/foce-child/assets/img/Studio_Koukaki-image_place.png);
+
+    .big_cloud_container {
+        position: absolute;
+        right: 5em;        
+    }
+    
+    .clouds {    
+        filter: blur(15px);
+        animation: linear;
+        animation-name: run;
+        animation-duration: 3s;
+        animation-fill-mode : forwards;
+
+        & > img:first-child {
+            margin-left:10em
+        }
+
+        & > img {
+            padding-top: 5em; 
+            display:block;
+        }
+      }
+      
+      @-webkit-keyframes run {
+          0% {
+            transform: translateX(0);
+          }
+          100% {
+            transform: translateX(-130%);
+          }
+      }
+    
+}
+
+
+
+
+
   
-.toAnim.anim {
-    opacity: 1;
-}
+
+
+// .btn {
+//     width:10em;
+//     text-align:center;
+//     padding:1em;
+//     background:pink;
+//     border-radius:0.5em;
+//     margin-top:2em;
+
+//     &:active {
+//         & + .progress {
+//             & > .progress__bar {
+//                 transform: scaleX(3);
+//             }
+//         }
+//     }
+// }
+
+// .progress {
+//     border: 1px solid black;
+//     height:1em;
+//     margin:2em 0;
+//     width:50%;
+//     overflow: hidden;
+    
+//     .progress__bar {
+//         height:100%;
+//         background-color: pink;
+//         transform: scaleX(0);
+//         transition: transform 1000ms cubic-bezier(.32,0,.07,1);
+//         transform-origin: left;
+//     }
+// }
