--- a/app/public/wp-content/themes/foce-child/style.css
+++ b/app/public/wp-content/themes/foce-child/style.css
@@ -25,7 +25,7 @@
 
 /* Animation flottement pour le titre */
 .banner img {
-   border:10px solid lime
+
 }
 
 @keyframes float {
@@ -41,3 +41,4 @@
 		box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
 		transform: translatey(0px);
 	}
+}
