--- a/app/public/wp-content/themes/foce-child/assets/css/theme.scss
+++ b/app/public/wp-content/themes/foce-child/assets/css/theme.scss
@@ -1,3 +1,143 @@
+#masthead {
+
+    a.site-title {
+        padding-top:1em;
+        text-align: center;
+        width:100%;
+    }    
+
+    .menu-toggle {
+        right: 2em;
+        bottom: 1.5em;
+        display: block;
+        position: absolute;
+        cursor: pointer;
+    }
+
+
+    #showMenu {     
+        animation-name: show;
+        animation-duration: 3s;
+        @keyframes show {
+            0% { opacity: 0.4 }                
+            100% { opacity: 0.8 }    
+        }
+        opacity: 1;
+        background:#fff5e9;
+        height:100%;
+        width:100%;
+        text-align: center;
+        position: fixed;
+        top: 80px;
+        margin: auto;
+        max-width: 1440px;
+        z-index: 0;            
+
+        #menuContent {
+            animation-name: movingDown;
+            animation-duration: 3s;
+            animation-fill-mode: forwards;
+            @keyframes movingDown {
+                0% { transform: translateY(0%) }                
+                100%   { transform: translateY(15%) }    
+            }
+        }
+
+        img {
+            width:300px;
+            padding: 3em 1em 1em 1em;             
+        }
+
+        ul {
+            flex-direction: column;
+            justify-content:initial;
+    
+            li {
+                font-size:2.7em;
+                text-align: center;
+                padding:0.5em;
+
+                a {
+                    color:black;   
+                    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+                    transition: color 1s;   
+                    
+                    &:hover {
+                        color:red;
+                        text-shadow: 2px 2px 5px rgba(211, 89, 18, 0.5);
+                    }
+                }
+                
+            }
+        }
+    }
+
+    #site-navigation {
+        display: flex; 
+        z-index: 100;  
+    }    
+
+   
+    .main-navigation {
+        display:none;        
+
+        .line {
+            height: 2px;
+            margin-block: 7px;
+            width: 40px;
+        }
+
+        .rotate {
+            //transition: transform 3s ease;
+            transition-property: transform;
+            transition-duration: 3s;
+            transition-timing-function: ease;
+
+            #Line1 {
+                transform: rotate(45deg);
+            }            
+
+            #Line2 {
+                display:none;
+            }
+
+            #Line3 {
+                transform: rotate(-45deg);
+            }
+        }        
+    }
+
+    .toggled {
+        display:block;
+        position: relative;
+
+        .menu-toggle {
+            top: 2em;
+        }
+
+        .line {
+            position:absolute!important;
+            top: 0;
+            right:0.5em
+        }
+
+        
+    }
+    
+}
+
+// .showMenu {
+//     background: lightblue;
+//     width: 100%;
+//     height: 0;
+//     overflow: hidden;
+//     transition: 1s height ease-in-out;
+//   }
+  
+// .showMenu.start {
+//     height: 100vh;
+// }
+
 /* Animation de rotation pour les fleurs */
 .story__article::after, .story h2::after, #studio h2::before, #studio h2::after, .site-footer::before, .site-footer::after {
     animation: rotation 20s infinite linear;
@@ -11,6 +151,19 @@
         transform: rotate(360deg);
     }
  }
+
+
+ @media screen and (min-width: 700px) {
+    .main-navigation {
+        min-height: 80px;
+        position: fixed;
+        width: 1440px;
+    }
+}
+
+main {
+    padding-top:5.5em
+}
 
 
 footer {
@@ -49,13 +202,21 @@ footer {
 .banner {
     margin-bottom:5em;
     position: relative;
-    
-    @media screen and (min-width: 601px) {
-        min-height: 806px;
-        background-image: none;
+    overflow: hidden;
+    display: flex;
+    // align-items: center;
+    // justify-content: center;
+    // background-image: url("/wp-content/themes/foce/assets/images/banner.png");
+    background-image: none;
 
+    @media screen and (min-width: 601px) {
+        min-height: 900px;
         img {
-            width:100%;
+            margin: auto
+        }
+
+        img.logo {
+            //position: sticky;
             animation-name: floating;
             animation-duration: 6s;
             animation-iteration-count: infinite;
@@ -74,9 +235,10 @@ footer {
             opacity: 1;
             width: 100vw;
             object-fit: cover;
-            z-index: 0;
+            position: absolute;
         } 
     }
+
     @media screen and (max-width: 600px) {
         min-height: 400px;
         video {
@@ -97,11 +259,11 @@ footer {
     width:95%;
 
     div {
-        background-image: url("/wp-content/themes/foce/assets/images/orange_place_bg.png");
+        background-image: url("/wp-content/themes/foce-child/assets/img/orange_nomination_bg.png");
         background-repeat: no-repeat;
         background-size: contain;
         background-position: center;
-        padding: 5em;    
+        padding: 2em;
     }
 
     h3 {
@@ -123,64 +285,21 @@ footer {
 
 
 
-h2, h3 {
-    // opacity: 1;
-    // transition: opacity 2s ease 0s;
-
-    // &:hover {
-    //     opacity: 1;
-    // }
-    #movetxt {
-        opacity: 0;
-        transition: opacity 1s ease 0s;
-
-        &:hover {
-            opacity:1;
-            -webkit-animation: moving 1s ease-out;
-            animation: moving 500ms ease-out;
-        }
-
-        @-webkit-keyframes moving {
-            from {-webkit-transform: translateY(30px);}
-            to {-webkit-transform: translateY(0px);}
-        }
-        
-        @keyframes moving {
-            from {transform: translateY(30px);}
-            to {transform: translateY(0px);}
-        }
-    }
-
-}
-
-
-
-
 
 
 // sass --watch theme.scss:theme.css --style compressed
 
-// section {
-//     animation: fadeInAnimation ease 3s;
-//     border:5px solid yellow!important;
-// }
-
-// @keyframes fadeInAnimation {
-//     0% {
-//         opacity: 0;
-//     }
-
-//     100% {
-//         opacity: 1;
-//     }
-// }
 .toAnim {
     opacity: 0;
-    transition: opacity 2s ease 0s;
+    transition: opacity 3s ease 0s;
     &.anim {
         opacity: 1;
     }
 }
+
+
+
+
 
 .swiper {
     width: 80%;
@@ -199,50 +318,45 @@ h2, h3 {
     }
 }
 
-.swiper-wrapper {
-    // transform: translate3d(0px, 0px, 0px)!important;
+.story #place > div {
+    max-width: 60%;
 }
 
 
+.story #characters div {
+    background: none;
+}
 
 
 .story #place {
     background-image: url(/wp-content/themes/foce-child/assets/img/Studio_Koukaki-image_place.png);
-
+    
     .big_cloud_container {
+        overflow:hidden;
         position: absolute;
-        right: 5em;        
+        right: 0;
+        width:60%;
+        filter: blur(15px); 
+        
+        .clouds {
+    
+            & > img:first-child {
+                margin-left:10em
+            }
+    
+            & > img {
+                padding-top: 5em; 
+                display:block;
+            }
+        }
+          
     }
     
-    .clouds {    
-        filter: blur(15px);
-        animation: linear;
-        animation-name: run;
-        animation-duration: 3s;
-        animation-fill-mode : forwards;
-
-        & > img:first-child {
-            margin-left:10em
-        }
-
-        & > img {
-            padding-top: 5em; 
-            display:block;
-        }
-      }
-      
-      @-webkit-keyframes run {
-          0% {
-            transform: translateX(0);
-          }
-          100% {
-            transform: translateX(-130%);
-          }
-      }
+    
     
 }
 
-
+/* Styles to make skrollable work. Copy these to your file. */
 
 
 
